2010-01-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 0.39 (tag v0.39)

2010-01-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Drop procs `pg-set-client-data!', `pg-get-client-data'.

	* basic.scm (test:set-client-data, test:get-client-data):
	Eviscerate; simply return, and check for, the symbol `defunct'.

2010-01-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Drop proc `pg-lo-get-connection'.

	* large.scm (test:lo-open-read): Don't call `pg-lo-get-connection'.

2009-06-22  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 0.38 (tag v0.38)

2009-06-22  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Make `pg-parameter-status' accept symbol for PARM.

	* basic.scm (test:parameter-status): Use symbols.
	(test:server-version): Use symbol for `pg-parameter-status' parm.

2009-06-20  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[test] Make more robust: Normalize `pg-client-encoding' rv.

	* basic.scm (test:various-connection-info):
	Add internal proc to normalize encoding names UNICODE to UTF8,
	ALT to WIN866, WIN to WIN1251, and TCVN to WIN1258.

2009-06-20  Thien-Thi Nguyen  <ttn@gnuvola.org>

	New (database postgres) proc: pg-server-version

	* basic.scm (test:server-version): New test proc.
	(main): Use new test proc; update expected-pass number.

2009-06-20  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[test] Verify length of inserted `bytea' data.

	* types-table.scm (test-m3):
	Check `octet_length' of inserted data.

2009-06-20  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[test] Improve `pg-set-client-encoding' coverage.

	* basic.scm (test:various-connection-info): Ensure
	that the new encoding is actually different from the original.

2009-06-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	New (database postgres) proc: pg-mblen

	* basic.scm (test:mblen): New test proc.
	(main): Use new test proc; update expected-pass number.

2008-09-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Use `(string-null? foo)' instead of `(string=? "" foo)'.

	* basic.scm (ok?): Use `string-null?'.
