@@ -1,3 +1,9 @@
+2011-05-03  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[v] Show files loaded if in debug mode.
+
+	* testing.scm: If env var DEBUG set, enable ‘%load-verbosely’.
+
 2010-01-11  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	Release: 0.39 (tag v0.39)
